--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 
 <ion-content padding>
   <div style="width:100%" style="text-align:center">
-     <img width="40%"  src="assets/img/icono.png"/>
+     <img width="40%"  src="assets/imgs/icono.png"/>
   </div>
     
   <ion-title color="secondary">  <h2 style="color:#52a780;text-align:center"  >Agrolink</h2>
