--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -36,7 +36,10 @@
             <h2>Tipo de identificacion</h2>
             <p>{{tipo_id}}</p>
         </ion-item>
-
+        <ion-item>
+                <h2>Empresa</h2>
+                <p>{{empresa}}</p>
+            </ion-item>
         <ion-item>
             <h2>ID</h2>
             <p>{{id}}</p>
