--- a/src/pages/updetalles/updetalles.html
+++ b/src/pages/updetalles/updetalles.html
@@ -1,5 +1,5 @@
 <ion-header  >
-  <ion-toolbar class="cyan" color="secondary">
+  <ion-toolbar class="cyan"  color="pesto-primary">
     <ion-title>
      Detalles
     </ion-title>
