--- a/src/pages/unidadproductiva/unidadproductiva.html
+++ b/src/pages/unidadproductiva/unidadproductiva.html
@@ -1,11 +1,8 @@
 <ion-header>
-  <ion-navbar color="secondary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Unidades Productivas</ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="showPrompt()">
+   <ion-navbar color="pesto-primary">
+      <ion-title>Unidades Productivas</ion-title>
+    <ion-buttons end >
+      <button ion-button icon-only  (click)="showPrompt()">
         <ion-icon name="options"></ion-icon>
       </button>
     </ion-buttons>
@@ -15,140 +12,231 @@
 <ion-content>
   <div *ngIf="promotor">
 
-    <ion-list-header>
+    <ion-list-header color="pesto-light">
       Unidades para promotoria
     </ion-list-header>
-    <div *ngFor="let item of items">
-      <div *ngIf="item.tipo==1001">
-        <!--promotoria-->
+
+    <ion-list>
+      <div *ngFor="let item of items">
+        <div *ngIf="item.tipo==1001">
+
+            <ion-card *ngIf="item.terminado === 0" >
+                <ion-item-sliding>
+                  <ion-item>
+                    <ion-thumbnail item-start>
+                      <img src="assets/imgs/finca.png">
+                    </ion-thumbnail>
+                    <ion-row>
+                      <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                        <br>
+                      </ion-col>
+                      <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                      <ion-col col-6 text-center>
+                        <span> {{item.region}} </span>
+                      </ion-col>
+                      <ion-col col-6 text-center>
+                        <span> {{item.productor}} </span>
+                      </ion-col>
+                    </ion-row>
+                  </ion-item>
+                  <ion-item-options side="right">
+                    <button ion-button color="secondary">
+                      <ion-icon name="clipboard"></ion-icon>
+                      Formulario
+                    </button>
+                    <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary">
+                      <ion-icon name="eye"></ion-icon>
+                      Detalles
+                    </button>
+                  </ion-item-options>
+                </ion-item-sliding>
+              </ion-card>
+    
+
+          <ion-card *ngIf="item.terminado === 1" style="border-top:2px solid yellow">
+            <ion-item-sliding>
+              <ion-item>
+                <ion-thumbnail item-start>
+                  <img src="assets/imgs/finca.png">
+                </ion-thumbnail>
+                <ion-row>
+                  <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                    <br>
+                  </ion-col>
+                  <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                  <ion-col col-6 text-center>
+                    <span> {{item.region}} </span>
+                  </ion-col>
+                  <ion-col col-6 text-center>
+                    <span> {{item.productor}} </span>
+                  </ion-col>
+                </ion-row>
+              </ion-item>
+              <ion-item-options side="right">
+                <button ion-button color="secondary">
+                  <ion-icon name="clipboard"></ion-icon>
+                  Formulario
+                </button>
+                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary">
+                  <ion-icon name="eye"></ion-icon>
+                  Detalles
+                </button>
+              </ion-item-options>
+            </ion-item-sliding>
+          </ion-card>
+
+          <ion-card *ngIf="item.terminado === 2" style="border-top:2px solid mediumseagreen">
+            <ion-item-sliding>
+              <ion-item>
+                <ion-thumbnail item-start>
+                  <img src="assets/imgs/finca.png">
+                </ion-thumbnail>
+                <ion-row>
+                  <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                    <br>
+                  </ion-col>
+                  <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                  <ion-col col-6 text-center>
+                    <span> {{item.region}} </span>
+                  </ion-col>
+                  <ion-col col-6 text-center>
+                    <span> {{item.productor}} </span>
+                  </ion-col>
+                </ion-row>
+              </ion-item>
+              <ion-item-options side="right">
+                <button ion-button color="secondary">
+                  <ion-icon name="clipboard"></ion-icon>
+                  Formulario
+                </button>
+                <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary">
+                  <ion-icon name="eye"></ion-icon>
+                  Detalles
+                </button>
+              </ion-item-options>
+            </ion-item-sliding>
+          </ion-card>
+
+        </div>
+
+      </div>
+    </ion-list>
+
+    <div *ngIf="auditor">
+
+        <ion-list-header color="pesto-light">
+            Unidades para Auditoria
+          </ion-list-header>
+
+      <div *ngFor="let item of items">
+
+        <div *ngIf="item.tipo==1002">
+          <!--promotoria-->
+
+          <ion-card *ngIf="item.terminado === 0">
+              <ion-item-sliding>
+                <ion-item>
+                  <ion-thumbnail item-start>
+                    <img src="assets/imgs/finca.png">
+                  </ion-thumbnail>
+                  <ion-row>
+                    <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                      <br>
+                    </ion-col>
+                    <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                    <ion-col col-6 text-center>
+                      <span> {{item.region}} </span>
+                    </ion-col>
+                    <ion-col col-6 text-center>
+                      <span> {{item.productor}} </span>
+                    </ion-col>
+                  </ion-row>
+                </ion-item>
+                <ion-item-options side="right">
+                  <button ion-button color="secondary">
+                    <ion-icon name="clipboard"></ion-icon>
+                    Formulario
+                  </button>
+                  <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary" >
+                    <ion-icon name="eye"></ion-icon>
+                    Detalles
+                  </button>
+                </ion-item-options>
+              </ion-item-sliding>
+            </ion-card>
+  
+
         <ion-card *ngIf="item.terminado === 1" style="border-top:2px solid yellow">
-          <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-            <ion-row>
-
-              <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-                <br>
-              </ion-col>
-              <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.region}} </span>
-              </ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.productor}} </span>
-              </ion-col>
-            </ion-row>
-
-          </button>
+          <ion-item-sliding>
+            <ion-item>
+              <ion-thumbnail item-start>
+                <img src="assets/imgs/finca.png">
+              </ion-thumbnail>
+              <ion-row>
+                <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                  <br>
+                </ion-col>
+                <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                <ion-col col-6 text-center>
+                  <span> {{item.region}} </span>
+                </ion-col>
+                <ion-col col-6 text-center>
+                  <span> {{item.productor}} </span>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+            <ion-item-options side="right">
+              <button ion-button color="secondary">
+                <ion-icon name="clipboard"></ion-icon>
+                Formulario
+              </button>
+              <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary">
+                <ion-icon name="eye"></ion-icon>
+                Detalles
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-card>
+
         <ion-card *ngIf="item.terminado === 2" style="border-top:2px solid mediumseagreen">
-          <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-            <ion-row>
-
-              <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-                <br>
-              </ion-col>
-              <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.region}} </span>
-              </ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.productor}} </span>
-              </ion-col>
-            </ion-row>
-
-          </button>
+          <ion-item-sliding>
+            <ion-item>
+              <ion-thumbnail item-start>
+                <img src="assets/imgs/finca.png">
+              </ion-thumbnail>
+              <ion-row>
+                <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
+                  <br>
+                </ion-col>
+                <ion-col col-6 text-center>  {{item.nombre}}</ion-col>
+                <ion-col col-6 text-center>
+                  <span> {{item.region}} </span>
+                </ion-col>
+                <ion-col col-6 text-center>
+                  <span> {{item.productor}} </span>
+                </ion-col>
+              </ion-row>
+            </ion-item>
+            <ion-item-options side="right">
+              <button ion-button color="secondary">
+                <ion-icon name="clipboard"></ion-icon>
+                Formulario
+              </button>
+              <button ion-button (click)="abrirdetalles(item.idUnidadProductiva)" color="primary">
+                <ion-icon name="eye"></ion-icon>
+                Detalles
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-card>
-        <ion-card style="border-top:2px solid lightgray" *ngIf="item.terminado === 0">
-          <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-            <ion-row>
-              <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-                <br>
-              </ion-col>
-              <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.region}} </span>
-              </ion-col>
-              <ion-col col-6 text-center>
-                <span> {{item.productor}} </span>
-              </ion-col>
-            </ion-row>
-          </button>
 
-        </ion-card>
+
+        </div>
+
 
       </div>
 
     </div>
-<div *ngIf="auditor">
-
-  <ion-list-header>
-    Unidades para Auditoria
-  </ion-list-header>
-
-  <div *ngFor="let item of items">
-
-    <div *ngIf="item.tipo==1002">
-      <!--promotoria-->
-
-      <ion-card *ngIf="item.terminado === 1" style="border-top:2px solid yellow">
-        <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-          <ion-row>
-
-            <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-              <br>
-            </ion-col>
-            <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.region}} </span>
-            </ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.productor}} </span>
-            </ion-col>
-          </ion-row>
-
-        </button>
-      </ion-card>
-      <ion-card *ngIf="item.terminado === 2" style="border-top:2px solid mediumseagreen">
-        <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-          <ion-row>
-
-            <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-              <br>
-            </ion-col>
-            <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.region}} </span>
-            </ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.productor}} </span>
-            </ion-col>
-          </ion-row>
-
-        </button>
-      </ion-card>
-      <ion-card style="border-top:2px solid lightgray" *ngIf="item.terminado === 0">
-        <button ion-item (click)="abrirdetalles(item.idUnidadProductiva)">
-          <ion-row>
-            <ion-col col-6 text-center> {{item.idUnidadProductiva}}
-              <br>
-            </ion-col>
-            <ion-col col-6 text-center> {{item.nombre}}</ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.region}} </span>
-            </ion-col>
-            <ion-col col-6 text-center>
-              <span> {{item.productor}} </span>
-            </ion-col>
-          </ion-row>
-        </button>
-
-      </ion-card>
-
-    </div>
-
-
-  </div>
-
-</div>
 
   </div>
 
