mejorando parte visual

--- a/src/pages/casoespecial/casoespecial.html
+++ b/src/pages/casoespecial/casoespecial.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="pesto-primary">
     <ion-title>Casos especiales</ion-title>
   </ion-navbar>
 
