--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
           <img src="assets/imgs/forms.png">
         </ion-thumbnail>
         <h2 style="font-weight:bold">Formularios de auditoria</h2>
-        <p>
+        <p color="pesto-secondary-text">
           Ingrese para diligencias los formularios de auditoria
         </p>
       </button>
@@ -32,8 +32,8 @@
           <img src="assets/imgs/foms2.png">
         </ion-thumbnail>
         <h2 style="font-weight:bold">Formulario de promotoria</h2>
-        <p>
-          Ingrese para realizar el diligenciamiento del formulario de promotoria para un producto
+        <p color="pesto-secondary-text">
+          Ingrese para realizar el diligenciamiento del formulario de promotoria
         </p>
       </button>
     </ion-card>
@@ -44,7 +44,8 @@
           <img src="assets/imgs/unidades.png">
         </ion-thumbnail>
         <h2 style="font-weight:bold">Unidades productivas asignadas</h2>
-        <p>
+        <p color="pesto-secondary-text">
+
           Unidades productivas con sus respectivos detalles
         </p>
       </button>
@@ -55,7 +56,8 @@
           <img src="assets/imgs/enviar.png">
         </ion-thumbnail>
         <h2 style="font-weight:bold">Enviar Formularios</h2>
-        <p>
+        <p color="pesto-secondary-text">
+
           Envio de formularios diligenciados
         </p>
       </button>
@@ -67,12 +69,12 @@
           <img src="assets/imgs/sinc.png">
         </ion-thumbnail>
         <h2 style="font-weight:bold">Descarcar Formularios</h2>
-        <p>
+        <p color="pesto-secondary-text">
           Elimina datos existentes y recargar sistema.
         </p>
       </button>
     </ion-card>
-
+<!--
     <ion-card>
       <button ion-item text-wrap (click)="casoespecial()">
         <ion-thumbnail item-start>
@@ -84,6 +86,7 @@
         </p>
       </button>
     </ion-card>
+  -->
 
   </ion-list>
 
