--- a/src/pages/home/sinc.html
+++ b/src/pages/home/sinc.html
@@ -1,5 +1,5 @@
 <ion-header  >
-    <ion-toolbar class="cyan" color="secondary">
+    <ion-toolbar class="cyan" color="pesto-dark">
       <ion-title>
     Enviar Formularios diligenciados
       </ion-title>
@@ -56,6 +56,6 @@
 
 </div>
 <div padding *ngIf="habilitarenvio">
-    <button ion-button color="secondary" style="border: 1px green solid;" block (click)="enviarunidadesseleccionadas()">Enviar</button>
+    <button ion-button color="pesto-secondary" style="border: 1px green solid;" block (click)="login()">Enviar</button>
   </div>
      </ion-content>
