--- a/src/pages/unidadproductiva/unidadproductiva.html
+++ b/src/pages/unidadproductiva/unidadproductiva.html
@@ -13,7 +13,10 @@
   <div *ngIf="promotor">
 
     <ion-list-header color="pesto-light">
-      Unidades para promotoria
+      <ion-thumbnail item-start>
+        <img src="assets/imgs/finca.png">
+      </ion-thumbnail>
+<h2>Unidades para promotoria</h2>
     </ion-list-header>
 
     <ion-list>
@@ -23,9 +26,6 @@
             <ion-card *ngIf="item.terminado === 0" >
                 <ion-item-sliding>
                   <ion-item>
-                    <ion-thumbnail item-start>
-                      <img src="assets/imgs/finca.png">
-                    </ion-thumbnail>
                     <ion-row>
                       <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                         <br>
@@ -56,9 +56,6 @@
           <ion-card *ngIf="item.terminado === 1" style="border-top:2px solid yellow">
             <ion-item-sliding>
               <ion-item>
-                <ion-thumbnail item-start>
-                  <img src="assets/imgs/finca.png">
-                </ion-thumbnail>
                 <ion-row>
                   <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                     <br>
@@ -88,9 +85,6 @@
           <ion-card *ngIf="item.terminado === 2" style="border-top:2px solid mediumseagreen">
             <ion-item-sliding>
               <ion-item>
-                <ion-thumbnail item-start>
-                  <img src="assets/imgs/finca.png">
-                </ion-thumbnail>
                 <ion-row>
                   <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                     <br>
@@ -125,7 +119,12 @@
     <div *ngIf="auditor">
 
         <ion-list-header color="pesto-light">
-            Unidades para Auditoria
+            <ion-thumbnail item-start>
+                <img src="assets/imgs/finca.png">
+              </ion-thumbnail>
+ <h2>
+    Unidades para Auditoria
+ </h2>
           </ion-list-header>
 
       <div *ngFor="let item of items">
@@ -136,9 +135,6 @@
           <ion-card *ngIf="item.terminado === 0">
               <ion-item-sliding>
                 <ion-item>
-                  <ion-thumbnail item-start>
-                    <img src="assets/imgs/finca.png">
-                  </ion-thumbnail>
                   <ion-row>
                     <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                       <br>
@@ -169,9 +165,6 @@
         <ion-card *ngIf="item.terminado === 1" style="border-top:2px solid yellow">
           <ion-item-sliding>
             <ion-item>
-              <ion-thumbnail item-start>
-                <img src="assets/imgs/finca.png">
-              </ion-thumbnail>
               <ion-row>
                 <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                   <br>
@@ -201,9 +194,6 @@
         <ion-card *ngIf="item.terminado === 2" style="border-top:2px solid mediumseagreen">
           <ion-item-sliding>
             <ion-item>
-              <ion-thumbnail item-start>
-                <img src="assets/imgs/finca.png">
-              </ion-thumbnail>
               <ion-row>
                 <ion-col col-6 text-center>  {{item.idUnidadProductiva}}
                   <br>
